force-app/main/default/objects/Appointment__c/fields/Appointment_Origin__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Origin__c</fullName>
    <label>Appointment Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TA Site Locator</fullName>
                <default>true</default>
                <label>TA Site Locator</label>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>Telephone</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Call center</fullName>
                <isActive>false</isActive>
                <label>Call center</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>