force-app/main/default/objects/Appointment__c/fields/Appt_Reserved_Date__c.field-meta.xml
<CustomField>
    <fullName>Appt_Reserved_Date__c</fullName>
    <description>This field captures the date when the appointment status goes from available to reserved. It is used in a workflow, that sends out notification to the taxpayer for their appointment reminder.</description>
    <label>Appointment Reserved Date</label>
    <type>Date</type>
</CustomField>