force-app/main/default/objects/Appointment__c/fields/Cancel_Reason_Other__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Reason_Other__c</fullName>
    <description>This field is required when Other is selected in the Cancellation Reason field.</description>
    <label>Cancel Reason, Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>