force-app/main/default/objects/Appointment__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <description>Captures why a session was cancelled</description>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>System malfunction</fullName>
            </value>
            <value>
                <fullName>Inclement weather</fullName>
            </value>
            <value>
                <fullName>No show</fullName>
            </value>
            <value>
                <fullName>Scheduled at another site</fullName>
            </value>
            <value>
                <fullName>Taxes completed by third party</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Shift Cancelled</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>