force-app/main/default/objects/Appointment__c/fields/Counselor__c.field-meta.xml
<CustomField>
    <fullName>Counselor__c</fullName>
    <inlineHelpText>This will provide the counselors that are assigned to an appointment.</inlineHelpText>
    <label>Counselor</label>
    <length>40</length>
    <type>Text</type>
</CustomField>