force-app/main/default/objects/Appointment__c/fields/End_Time_converted_Text__c.field-meta.xml
<CustomField>
    <fullName>End_Time_converted_Text__c</fullName>
    <label>End Time Converted Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>