force-app/main/default/objects/Appointment__c/fields/Is_Reoccurring__c.field-meta.xml
<CustomField>
    <fullName>Is_Reoccurring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Reoccurring</label>
    <type>Checkbox</type>
</CustomField>