force-app/main/default/objects/Appointment__c/fields/Local_Coordinators_Email__c.field-meta.xml
<CustomField>
    <fullName>Local_Coordinators_Email__c</fullName>
    <description>Trigger to populate the Local Coordinator&#39;s email</description>
    <label>Local Coordinators Email</label>
    <type>Email</type>
</CustomField>