force-app/main/default/objects/Appointment__c/fields/Number_Of_Reserved_Appointments__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Reserved_Appointments__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number Of Reserved Appointments</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>