force-app/main/default/objects/Appointment__c/fields/Number_of_Taxpayer_s_Waitlisted__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Taxpayer_s_Waitlisted__c</fullName>
    <formula>Program_Location__r.Number_of_Taxpayer_s_Waitlisted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to create notification regarding available appointments for waitlist</inlineHelpText>
    <label>Number of Taxpayer&#39;s Waitlisted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>