force-app/main/default/objects/Appointment__c/fields/Opt_In_To_Receive_Additional_Services__c.field-meta.xml
<CustomField>
    <fullName>Opt_In_To_Receive_Additional_Services__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is to capture taxpayers that have agreed to receive marketing material about AARP Foundation products and services.</description>
    <label>Opt In To Receive Additional Services</label>
    <type>Checkbox</type>
</CustomField>