force-app/main/default/objects/Appointment__c/fields/Origin_Other_Notes__c.field-meta.xml
<CustomField>
    <fullName>Origin_Other_Notes__c</fullName>
    <description>Allows for input on how the session was scheduled</description>
    <label>Origin Other Notes</label>
    <length>80</length>
    <type>Text</type>
</CustomField>