force-app/main/default/objects/Appointment__c/fields/Parent_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Parent_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Appointment</label>
    <referenceTo>Appointment__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments_del</relationshipName>
    <type>Lookup</type>
</CustomField>