force-app/main/default/objects/Appointment__c/fields/Postal_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Zip_Code__c</fullName>
    <label>Postal Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>