force-app/main/default/objects/Appointment__c/fields/Program_Location__c.field-meta.xml
<CustomField>
    <fullName>Program_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Location</label>
    <referenceTo>Program_Location__c</referenceTo>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>