force-app/main/default/objects/Appointment__c/fields/Program_Location_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Program_Location_Address_Line_1__c</fullName>
    <formula>Program_Location__r.Location__r.Address_Line_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Location Address Line 1</label>
    <type>Text</type>
</CustomField>