force-app/main/default/objects/Appointment__c/fields/Program_Location_Address_line_2__c.field-meta.xml
<CustomField>
    <fullName>Program_Location_Address_line_2__c</fullName>
    <formula>Program_Location__r.Location__r.Address_Line_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Location Address line 2</label>
    <type>Text</type>
</CustomField>