force-app/main/default/objects/Appointment__c/fields/Program_Location_City__c.field-meta.xml
<CustomField>
    <fullName>Program_Location_City__c</fullName>
    <formula>Program_Location__r.Location__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Location City</label>
    <type>Text</type>
</CustomField>