force-app/main/default/objects/Appointment__c/fields/Program_Location_Phone__c.field-meta.xml
<CustomField>
    <fullName>Program_Location_Phone__c</fullName>
    <formula>Program_Location__r.Point_of_Contact_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Location POC Phone</label>
    <type>Text</type>
</CustomField>