force-app/main/default/objects/Appointment__c/fields/Program_Location_POC_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Location_POC_Name__c</fullName>
    <formula>Program_Location__r.Point_of_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Location POC Name</label>
    <type>Text</type>
</CustomField>