force-app/main/default/objects/Appointment__c/fields/Program_Location_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Program_Location_Postal_Code__c</fullName>
    <formula>Program_Location__r.Location__r.Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Location Postal Code</label>
    <type>Text</type>
</CustomField>