force-app/main/default/objects/Appointment__c/fields/Program_Location_State__c.field-meta.xml
<CustomField>
    <fullName>Program_Location_State__c</fullName>
    <formula>Text(Program_Location__r.Location__r.State_Territory__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Location State</label>
    <type>Text</type>
</CustomField>