force-app/main/default/objects/Appointment__c/fields/Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Name__c</fullName>
    <description>Formula field used to populate program location name.</description>
    <formula>Program_Location__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field used to populate program location name.</inlineHelpText>
    <label>Site Name</label>
    <type>Text</type>
</CustomField>