force-app/main/default/objects/Appointment__c/fields/Start_Time_Converted_Text__c.field-meta.xml
<CustomField>
    <fullName>Start_Time_Converted_Text__c</fullName>
    <inlineHelpText>This field populates</inlineHelpText>
    <label>Start Time Converted Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>