force-app/main/default/objects/Appointment__c/fields/Taxpayer_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Taxpayer_First_Name__c</fullName>
    <label>Taxpayer First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>