force-app/main/default/objects/Appointment__c/fields/Taxpayer_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Taxpayer_Last_Name__c</fullName>
    <label>Taxpayer Last Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>