force-app/main/default/objects/Appointment__c/fields/Volunteer_Shift__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Shift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer Shift</label>
    <referenceTo>Volunteer_Shift__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>