force-app/main/default/objects/Appointment__c/validationRules/Birth_date_cannot_be_in_the_future.validationRule-meta.xml
<ValidationRule>
    <fullName>Birth_date_cannot_be_in_the_future</fullName>
    <active>true</active>
    <description>Birthdate cannot be be in the future.</description>
    <errorConditionFormula>Birthdate__c  &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Birthdate__c</errorDisplayField>
    <errorMessage>Birthdate cannot be in the future.</errorMessage>
</ValidationRule>