force-app/main/default/objects/Appointment__c/validationRules/End_Date_Cannot_Be_Before_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Cannot_Be_Before_Start_Date</fullName>
    <active>true</active>
    <description>End date cannot be before start date.</description>
    <errorConditionFormula>Date__c &gt;  End_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End date cannot be before start date.</errorMessage>
</ValidationRule>