force-app/main/default/objects/Appointment__c/validationRules/Postal_Code_5_Or_9_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Postal_Code_5_Or_9_Digits</fullName>
    <active>true</active>
    <description>Enforces zip code format</description>
    <errorConditionFormula>AND (
NOT(REGEX(Postal_Zip_Code__c,
&quot;^(?![\\s\\S])|(^\\d{5}(-\\d{4})?)$&quot;)),
  ISPICKVAL( Status__c , &quot;Reserved&quot;) 
)</errorConditionFormula>
    <errorDisplayField>Postal_Zip_Code__c</errorDisplayField>
    <errorMessage>Postal Code must be either 5 or 9 digits ##### or #####-####</errorMessage>
</ValidationRule>